修复流程bug，新增搜索组件